src/main/events/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <label>Acme Event</label>
    <nameField>
        <label>Acme Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acme Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>