src/main/events/objects/Event__c/fields/Invited_Registrants__c.field-meta.xml
<CustomField>
    <fullName>Invited_Registrants__c</fullName>
    <label>Invited Registrants</label>
    <summaryFilterItems>
        <field>EventRegistration__c.Status__c</field>
        <operation>equals</operation>
        <value>Invited</value>
    </summaryFilterItems>
    <summaryForeignKey>EventRegistration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>