src/main/events/objects/Event__c/fields/No_Shows__c.field-meta.xml
<CustomField>
    <fullName>No_Shows__c</fullName>
    <label>No Shows</label>
    <summaryFilterItems>
        <field>EventRegistration__c.IsNoShow__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>EventRegistration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>