src/main/events/objects/Event__c/fields/Registered_Registrants__c.field-meta.xml
<CustomField>
    <fullName>Registered_Registrants__c</fullName>
    <label>Registered Registrants</label>
    <summaryFilterItems>
        <field>EventRegistration__c.Status__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </summaryFilterItems>
    <summaryForeignKey>EventRegistration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>