src/main/events/objects/Event__c/fields/Total_Registrants__c.field-meta.xml
<CustomField>
    <fullName>Total_Registrants__c</fullName>
    <label>Total Registrants</label>
    <summaryForeignKey>EventRegistration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>