src/main/events/objects/Event__c/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>Unique Id for this event</description>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>