src/main/events/objects/Event__c/listViews/My_Events.listView-meta.xml
<ListView>
    <fullName>My_Events</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Total_Registrants__c</columns>
    <columns>UUID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Events</label>
</ListView>